--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>3D-hover</title>
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<link rel="stylesheet" href="css/main.css" type="text/css"/>
 	</head>
 	<body>
-		
+		<div id=test>
+			<div id="banner">banner</div>
+		</div>
+		<script src="js/3d-hover.js"></script>
 	</body>
 </html>
