css/main.css completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		<link rel="stylesheet" href="css/main.css" type="text/css"/>
 	</head>
 	<body>
+		<!--
+        	作者：dianyingx007@163.com
+        	时间：2016-12-06
+        	描述：当鼠标在test范围内，banner有反应
+        -->
 		<div id=test>
 			<div id="banner">banner</div>
 		</div>
