--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         	时间：2016-12-06
         	描述：当鼠标在test范围内，banner有反应
         -->
-		<div id=test>
+		<div id="test">
 			<div id="banner">banner</div>
 		</div>
 		<script src="js/3d-hover.js"></script>
