--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
 			<div id="banner">banner</div>
 		</div>
 		<script src="js/3d-hover.js"></script>
+		<script>
+			$('#banner').hover3d({
+				outer:$('#test')
+			});
+		</script>
 	</body>
 </html>
